[package]
name = "video_parsers"
version = "0.0.1"
license = "BSD-3-Clause"
description = "Video codec parsers"
repository = "https://github.com/knopp/video_parsers"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]

[dependencies]
anyhow = "1"
bitreader = "0.3.6"
byteorder = "1.4.3"
bytes = "1.1.0"
enumn = "0.1.4"
log = { version = "0", features = ["release_max_level_debug"] }
thiserror = "1.0.31"
crc32fast = "1.3.2"

[dev-dependencies]
env_logger = "0.10.0"
